hphp/hack/test/typecheck/capitalization1.php.exp
File "capitalization1.php", line 11, characters 17-25:
Could not find camelcase (Naming[2006])
File "capitalization1.php", line 3, characters 7-15:
Did you mean CamelCase?
